--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,18 @@
 
                     <!-- Opciones dinámicas según autenticación -->
                     {% if user.is_authenticated %}
+                        {% if user.rol == "administrador" or user.rol == "agente" %}
+                            <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a></li>
+                        {% endif %}
+
+                        {% if user.rol == "ciudadano" %}
+                            <li class="nav-item"><a class="nav-link" href="{% url 'lista_pqr' %}">Mis PQR</a></li>
+                        {% endif %}
+
+                        {% if user.rol == "tecnico" %}
+                            <li class="nav-item"><a class="nav-link" href="{% url 'mis_asignaciones' %}">Mis asignaciones</a></li>
+                        {% endif %}
+
                         <li class="nav-item"><a class="nav-link" href="{% url 'perfil' %}">Perfil</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Cerrar sesión</a></li>
                     {% else %}
