--- a/templates/base.html
+++ b/templates/base.html
@@ -18,16 +18,16 @@
     <!-- Header fijo con navegación -->
     <header class="navbar navbar-expand-lg navbar-dark bg-blue-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#inicio">ServiTracker</a>
+            <a class="navbar-brand" href="{% url 'index' %}">ServiTracker</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <nav class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#nosotros">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'index' %}#inicio">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'index' %}#nosotros">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'index' %}#servicios">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'index' %}#contacto">Contacto</a></li>
 
                     <!-- Opciones dinámicas según autenticación -->
                     {% if user.is_authenticated %}
