--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <h2 class="text-blue-dark">Bienvenido a ServiTracker</h2>
     <p class="lead">Reporta fallas en el servicio eléctrico de forma rápida y sencilla.</p>
     <div class="d-flex justify-content-center gap-3 mt-3">
-        <a href="/login" class="btn btn-blue-mid">Iniciar sesión</a>
+        <a href="{% url 'login' %}" class="btn btn-blue-mid">Iniciar sesión</a>
         <a href="/pqr/rapida" class="btn btn-orange-dark">PQR rápida</a>
     </div>
 </section>
