editar usuario perfe

--- a/templates/usuarios/lista_usuarios.html
+++ b/templates/usuarios/lista_usuarios.html
@@ -22,7 +22,7 @@
             <tr>
                 <!-- Documento clickeable -->
                 <td>
-                    <a href="{% url 'detalle_usuario' u.pk %}" class="text-decoration-none text-blue-dark">
+                    <a href="{% url 'editar_usuario' u.pk %}" class="text-decoration-none text-blue-dark">
                         {{ u.documento }}
                     </a>
                 </td>
