--- a/templates/reportes/dashboard.html
+++ b/templates/reportes/dashboard.html
@@ -42,8 +42,8 @@
         </a>
     </div>
     <div class="col-md-4">
-        <a href="{% url 'registro' %}" class="btn btn-orange-dark w-100 py-3 text-center">
-            ➕ Registrar nuevo usuario
+        <a href="{% url 'crear_usuario' %}" class="btn btn-orange-dark w-100 py-3 text-center">
+            ➕ Crear nuevo usuario
         </a>
     </div>
     <div class="col-md-4">
