--- a/templates/reportes/dashboard_admin.html
+++ b/templates/reportes/dashboard_admin.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
-{% block title %}Dashboard | ServiTracker{% endblock %}
+{% block title %}Dashboard Administrador | ServiTracker{% endblock %}
 
 {% block content %}
-<h2 class="text-blue-dark">Panel de Control</h2>
+<h2 class="text-blue-dark">Panel de Control del Administrador</h2>
+
 
 <!-- Contadores -->
 <div class="row mb-4">
